hphp/test/slow/this-default-arg-error-elevator-warn.php.expectf

Notice: Evaluation of default arg initializer in func=flerbo, arg=x threw a PHP exception--this reflection call won't throw in future HHVMs! in %s/this-default-arg-error-elevator-warn.php on line 26

Fatal error: Uncaught exception 'Exception' with message 'asdf' in %s/this-default-arg-error-elevator-warn.php:17
Stack trace:
#0 (1): err_handler()
#1 (): evaluate_default_argument()
#2 (): ReflectionFunctionAbstract->getParamInfo()
#3 %s/this-default-arg-error-elevator-warn.php(26): ReflectionFunctionAbstract->getParameters()
#4 (): main()
#5 {main}
